Tweak test to maintain JDK 8 support for the time being, no issue #
Arvados-DCO-1.1-Signed-off-by: Peter Amstutz <peter.amstutz@curii.com>